--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
 # Composer files
-composer.phar
+composer.*
 vendor/
+
+# PhpStorm
+.idea/
 
 # Local configs
 config/autoload/*.local.php
+public/
 
 # Binary gettext files
 *.mo
 
 # Data
+data/back/
 data/logs/
 data/cache/
 data/sessions/
